@@ -2,6 +2,7 @@ Changelog for Shake (* = breaking change)
 
     Document Development.Shake.Rule A LOT
 
+*   Change how alternative and priority rules interact
     Add versioned for rules
 *   Change all the ways of obtaining user rules, see getUserRuleOne
     Improve time recording for unsafeExtraThread, parallel, batch
